[package]
name = "autodpi"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["autodpi contributors"]
description = "Automatic DPI bypass strategy finder & transparent forwarder for censorship circumvention"
license = "MIT"
repository = "https://github.com/Mehrschad/autodpi"
readme = "README.md"
keywords = ["dpi", "anti-censorship", "sni", "tls", "proxy"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
